@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: April 12, 2009</p>
+      <p>Last Updated: April 19, 2009</p>
     </td>
   </tr>
 </table>
@@ -1387,12 +1387,18 @@ nuttx-0.4.5 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* eZ8Encore!: Add an I2C driver.
 	* Add support for the Freescale i.MX1/L architecture and a configuration for
 	  the Freescale MX1ADS development board.
+	* examples/helloxx: Added a simple C++ hello world example
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 buildroot-0.1.4 2009-xx-xx &lt;spudmonkey@racsa.co.cr&gt;
 
 	* Add support for a blackfin toolchain using GCC 4.2.4 and binutils 2.19
+	* GCC 4.2.4 no longer attempts to build libstdc++.  Now we can build g++!
+	* The ARM GCC-4.2.4 configuration was changed so that it now builds g++.
+	* Removed building of initial and final GCC.  that is not necessary because
+	  we do not build a libc.  Now it builds almost twice as fast.
+	* Removed logic to build the target GCC.  That is never used.
 
 </pre></ul>
 
